force-app/main/default/objects/blng__BillingTransaction__c/fields/blng__Amount__c.field-meta.xml
<CustomField>
    <fullName>blng__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>