force-app/main/default/objects/blng__BillingTransaction__c/fields/blng__AmountToBeBilled__c.field-meta.xml
<CustomField>
    <fullName>blng__AmountToBeBilled__c</fullName>
    <formula>IF( ISBLANK( blng__OverrideAmount__c ) , blng__Amount__c  , blng__OverrideAmount__c )</formula>
    <label>Amount To Be Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>