force-app/main/default/objects/blng__BillingTransaction__c/fields/blng__BillingSchedule__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingSchedule__c</fullName>
    <label>Billing Schedule</label>
    <referenceTo>blng__BillingSchedule__c</referenceTo>
    <relationshipLabel>Billing Transactions</relationshipLabel>
    <relationshipName>BillingTransactionsBillingSchedule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>