force-app/main/default/objects/blng__BillingTransaction__c/fields/blng__BillingTargetDate__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingTargetDate__c</fullName>
    <label>Billing Target Date</label>
    <type>Date</type>
</CustomField>