force-app/main/default/objects/blng__BillingTransaction__c/fields/blng__CalculatedStatus__c.field-meta.xml
<CustomField>
    <fullName>blng__CalculatedStatus__c</fullName>
    <formula>IF(ISPICKVAL(blng__OverrideStatus__c, &quot;--None--&quot;), TEXT(blng__Status__c), TEXT(blng__OverrideStatus__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Status</label>
    <type>Text</type>
</CustomField>