force-app/main/default/objects/blng__BillingTransaction__c/fields/blng__InvoicePlanLine__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoicePlanLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Plan Line</label>
    <referenceTo>blng__InvoicePlanLine__c</referenceTo>
    <relationshipLabel>Billing Transactions</relationshipLabel>
    <relationshipName>BillingTransactionsInvoicePlanLine</relationshipName>
    <type>Lookup</type>
</CustomField>