force-app/main/default/objects/blng__BillingTransaction__c/fields/blng__OverrideAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__OverrideAmount__c</fullName>
    <label>Override Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>