force-app/main/default/objects/blng__BillingTransaction__c/fields/blng__OverrideBillingTargetDate__c.field-meta.xml
<CustomField>
    <fullName>blng__OverrideBillingTargetDate__c</fullName>
    <label>Override Billing Target Date</label>
    <type>Date</type>
</CustomField>