force-app/main/default/objects/blng__BillingTransaction__c/fields/blng__OverrideStatus__c.field-meta.xml
<CustomField>
    <fullName>blng__OverrideStatus__c</fullName>
    <label>Override Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__OverrideStatus</valueSetName>
    </valueSet>
</CustomField>