force-app/main/default/objects/blng__BillingTransaction__c/fields/blng__ServicePeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>blng__ServicePeriodEnd__c</fullName>
    <label>Service Period End</label>
    <type>Date</type>
</CustomField>