force-app/main/default/objects/blng__BillingTransaction__c/fields/blng__ServicePeriodStart__c.field-meta.xml
<CustomField>
    <fullName>blng__ServicePeriodStart__c</fullName>
    <label>Service Period Start</label>
    <type>Date</type>
</CustomField>