force-app/main/default/objects/blng__BillingTransaction__c/fields/blng__Status__c.field-meta.xml
<CustomField>
    <fullName>blng__Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__BillingTransactionStatus</valueSetName>
    </valueSet>
</CustomField>